--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;200;300;400;500;600;700&family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" integrity="sha384-/frq1SRXYH/bSyou/HUp/hib7RVN1TawQYja658FEOodR/FQBKVqT9Ol+Oz3Olq5" crossorigin="anonymous"> 
-   <title>Inicio</title>
+   
+   <title>Inicio - Restaurant La Cabaña</title>
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/main.css">
-   
+
+        <!-- Meta Keywords -->
+        <meta name="keywords" content="Restaurant, montevideo, cocina, cocina tradicional, comida, parrilla, horno, carne, vegetales, inicio">
+
+        <!-- Meta description -->
+        <meta name="description" content="La Cabaña es un encantador restaurante familiar ubicado  en la cima de una colina. Está ambientado en las Sierras de Minas, Uruguay, una región llena de rocas y olivares. A menos de dos horas de Montevideo y menos de Punta del Este, disfrutará de magníficas vistas y cocina uruguaya casera de origen local.">
+
+    
         <style>a {text-decoration: none;
        color: black;}</style>
 </head>
@@ -64,7 +71,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-xl-8">
                             <h2 class="titulo">RESTAURANTE LA CABAÑA</h2>
-                            <p class="parrafo"> La Cabaña es un moderno restaurante asador ubicado en el corazón de Montevideo. Sus raíces están arraigadas en la cocina tradicional del Rio de la Plata. Las recetas giran en torno a las parrillas y al horno de barro. Puedes degustar desde cortes de carne importados hasta vegetales, pastas y risotto.</p>
+                            <p class="parrafo"> La Cabaña es un moderno restaurante asador ubicado en las Sierras de Minas. Sus raíces están arraigadas en la cocina tradicional del Rio de la Plata. Las recetas giran en torno a las parrillas y al horno de barro. Puedes degustar desde cortes de carne importados hasta vegetales, pastas y risotto.</p>
                         </div> 
                         <div class="col-lg-12 col-xl-4">
                             <img class="img-tres" src="img/restaurante1.jpg" alt="carne3">
