--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
    
    <title>Inicio - Restaurant La Cabaña</title>
 
+        <link rel="icon" href="img/logo.ico">
+
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -79,7 +81,6 @@
                     </div>
 
                   </section>
-
                   
                 </main>    
                  
