--- a/pages/menu.html
+++ b/pages/menu.html
@@ -103,7 +103,7 @@
                                 <h5 class="card-title">Menu Viernes</h5>
                                 <p class="card-text">
                                   <ul><h5>Entrante:</h5>
-                                    <li>Provoleta con tomate y rucula.</li>
+                                    <li>Provoleta con tomate, jamon serrano y rucula.</li>
                                     <li>Pescado a la marinera.</li>
                                     <li>Tabla de quesos con pan de masa madre.</li>
                                   </ul>
@@ -157,11 +157,11 @@
                                 <p class="card-text">
                                   <ul><h5>Entrante:</h5>
                                     <li>Camarones al ajillo y vino blanco.</li>
-                                    <li>Papas con salsa brava y allioli.</li>
-                                    <li>Sopa de cebolla con pan de masa madre.</li>
+                                    <li>Papas con salsa brava.</li>
+                                    <li>Sopa de cebolla con pan de masa madre y queso.</li>
                                   </ul>
                                   <ul><h5>Plato principal:</h5>
-                                    <li>Matambre a la leche.</li>
+                                    <li>Matambre a la leche con verduras al horno.</li>
                                     <li>Ñoquis con estofado.</li>
                                     <li>Plato especial (consultar).</li>
                                   </ul>
